# Kylin-MCP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
client/: client_example.py
kylin_mcp/: __init__.py  kylin_instance.py  kylin_prompt.py  main.py  mcp_env.py  mcp_server.py
kylin_mcp/auth/: __init__.py
kylin_mcp/tool/: __init__.py  kylin_prompt.py  kylin_resource.py  kylin_tool.py
kylin_mcp/utils/: __init__.py  config.py  kylin_instance.py
test-services/: docker-compose.yml  docker.sh
